externaldns+privatedns/deploynew.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.14.0
          args:
            - --source=service
            - --source=ingress
            - --source=istio-gateway
            - --source=istio-virtualservice
            - --domain-filter=kubernetes.com # (optional) limit to only example.com domains; change to match the zone created above.
            - --provider=azure-private-dns
              #            - --azure-resource-group="test-policy" # (optional) use the DNS zones from the tutorial's resource group
              #            - --txt-prefix=externaldns-
          volumeMounts:
            - name: azure-config-file
              mountPath: /etc/kubernetes
              readOnly: true
      volumes:
        - name: azure-config-file
          secret:
            secretName: azure-config-file
